--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
     <p>&nbsp;</p>
     <div style="padding:10px;background-color:#fbeec1;">
-        <p style="font-size:40px;line-height:0.2;font-weight:600;color:#8d8741;">MEMBRO X Tiago</p>
+        <p style="font-size:40px;line-height:0.2;font-weight:600;color:#8d8741;">MEMBRO 3</p>
         <p style="font-size:30px;line-height:0.2;font-weight:600;color:#8d8741">NOME <span>%nome_do_membro3%</span></p>
         <p style="font-size:30px;line-height:0.2;font-weight:600;color:#8d8741">%% <span>%%</span></p>
         <p style="font-size:30px;line-height:0.2;font-weight:600;color:#8d8741">%% <span>%%</span></p>
